--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conversor de Moedas</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="title">
+    <header>
         <h1>Conversor de Moedas</h1>
-    </div>
-    <div class="valSerConvert">
-        <h2>Digite o nome do tipo de moeda que será convertida</h2><br>
-        <input type="text" id="tipoMoeda" placeholder="Ex: 'EUR' ou 'BRL'" maxlength="3" oninput="this.value = this.value.toUpperCase()">
-        <h2>Digite o valor a ser convertido</h2>
-            <input type="number" id="valSeraConvert" placeholder="Digite o valor:" >
-        </p>
-    </div><br>
-    <div class="moedaConversao">
-        <h2>A conversão será para qual moeda?</h2><br>
-        <input type="text" id="moedaConversao" placeholder="Ex: 'EUR' ou 'BRL'" maxlength="3" oninput="this.value = this.value.toUpperCase()"><br><br>
-        <input type="button" value="Resultado" onclick="result()">
-    </div><br>
-    <div class="result">
-        <h3 id="result"></h3>
-    </div>
-<script src="script.js"></script>
+    </header>
+    <main>
+        <div class="corpo">
+                <h2>Digite o nome do tipo de moeda que será convertida</h2><br>
+                <input type="text" id="tipoMoeda" placeholder="Ex: 'EUR' ou 'BRL'" maxlength="3" oninput="this.value = this.value.toUpperCase()">
+                <h2>Digite o valor a ser convertido</h2>
+                    <input type="number" id="valSeraConvert" placeholder="Digite o valor:" >
+                <br>
+                <h2>A conversão será para qual moeda?</h2><br>
+                <input type="text" id="moedaConversao" placeholder="Ex: 'EUR' ou 'BRL'" maxlength="3" oninput="this.value = this.value.toUpperCase()"><br><br>
+                <button onclick="result()">Converter</button>
+            <br>
+            <div class="result">
+                <h3 id="result"></h3>
+                <h3 id="erro"></h3>
+            </div>
+        </div>
+    </main>
 </body> 
-
+<script src="script.js"></script>
 </html>
